--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Morris Alper"
   avatar           : "profile.png"
-  bio              : "MSc student at Tel Aviv University, data scientist and educator"
+  bio              : "MSc student at Tel Aviv University\nTech Lead at Israel Tech Challenge\nData scientist and educator"
   location         : "Tel Aviv, Israel"
   employer         :
   pubmed           : 
