--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Morris Alper"
   avatar           : "profile.png"
-  bio              : "MSc student at Tel Aviv University<br>Tech Lead and Lecturer at Israel Tech Challenge"
+  bio              : "MSc student at Tel Aviv University"
   location         : "Tel Aviv, Israel"
   employer         :
   pubmed           : 
